--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dev-dependencies = [
     "ruff>=0.4.0",
     "pytest>=8.1.1",
     "mypy>=1.9.0",
+    "hypothesis>=6.100.1",
 ]
 
 [tool.hatch.metadata]
